--- a/BasitFaizUygulaması.ipynb
+++ b/BasitFaizUygulaması.ipynb
@@ -6,6 +6,8 @@
    "source": [
     "# Basit Faiz\n",
     "\n",
+    "İşletmeler ve şahısların sahip oldukları mal veya sermayenin kullanım hakkının belirli bir süre için belirli bir getiri oranı ile bir başkasına devredilmesi sürecinde elde edilen getiri faiz olarak adlandırılmaktadır.\n",
+    "\n",
     "Belirli bir Anaparanın (P), belirli bir Faiz Oranı (r) üzerinden, belirli bir Zaman (t) periyodunda, her dönem için ayrı ayrı hesaplanması sonucu elde edilen faiz basit faiz olarak adlandırılır. Yukarıdaki sembollerin kullanılması ile birlikte basit faiz formülü aşağıdaki gibi verilebilir.\n",
     "\n",
     "I = P*r*t\n",
@@ -14,10 +16,17 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Örnek1: 8000$’lık anaparanın 2 yıl boyunca %8 basit faiz ile değerlendirilmesi sonucu elde edilecek faiz getirisini hesaplayınız."
+    "Örnek1: 8000$’lık anaparanın 2 yıl boyunca %8 basit faiz ile değerlendirilmesi sonucu elde edilecek faiz getirisini hesaplayınız.\n",
+    "\n",
+    "I = P x r x t \n",
+    "\n",
+    "I = 8000 x 0.08 x 2\n",
+    "\n",
+    "I = 1280 $"
    ]
   },
   {
@@ -49,10 +58,19 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Örnek2: 4000$’lık borç 9 ay sonra %10 basit faiz ile geri ödenecektir. Süreç sonunda ödemeye eklenecek faiz miktarını hesaplayınız."
+    "Örnek2: 4000$’lık borç 9 ay sonra %10 basit faiz ile geri ödenecektir. Süreç sonunda ödemeye eklenecek faiz miktarını hesaplayınız.\n",
+    "\n",
+    "t = 9 / 12\n",
+    "\n",
+    "I = P x r x t\n",
+    "\n",
+    "I = 4000 x 0.10 x ( 9 / 12 )\n",
+    "\n",
+    "I = 300 $"
    ]
   },
   {
@@ -100,9 +118,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Değerlendirilen Anaparayı Hesaplama\n",
+    "-----------------------------------------------------------------------------------------------------------------------------\n",
+    "DEĞERLENDİRİLEN ANAPARAYI HESAPLAMA\n",
     "\n",
-    "Örnek3: Bir yatırımcı %8 basit faize göre 3 aylığına yatırdığı parasına 400$ faiz almıştır. Yatırımcının değerlendirdiği anapara ne kadardır?"
+    "Örnek3: Bir yatırımcı %8 basit faize göre 3 aylığına yatırdığı parasına 400$ faiz almıştır. Yatırımcının değerlendirdiği anapara ne kadardır?\n",
+    "\n",
+    "t = 3/12\n",
+    "  = 0.25\n",
+    "\n",
+    "I = P*r*t\n",
+    "\n",
+    "400 = P x 0.08 x 0.25\n",
+    "\n",
+    "P = 400 / ( 0.08 x 0.25 )\n",
+    "\n",
+    "P = 20000 olur."
    ]
   },
   {
@@ -150,21 +180,33 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "-----------------------------------------------------------------------------------------------------------------------------\n",
     "BASİT FAİZ İLE ANAPARANIN GEÇMİŞ VE GELECEK DEĞERİNİ HESAPLAMA \n",
     "\n",
-    "Paranın gelecekteki değeri için (S) sembolünü kullanılması halinde bir yatırımın gelecekteki değeri, S = P + I veya S = P(1+r*t) formülü ile hesaplanır. Benzer bir biçimde yatırımın geçmişteki değeri tersine P = S - I bağıntısı ile hesaplanır.\n",
+    "Paranın gelecekteki değeri için (S) sembolünün kullanılması halinde bir yatırımın gelecekteki değeri, S = P + I veya S = P(1+r*t) formülü ile hesaplanır. Benzer bir biçimde yatırımın geçmişteki değeri tersine P = S - I bağıntısı ile hesaplanır.\n",
     "\n",
     "\n",
     "İLK VE SON MİKTARI BİLİNEN ANAPARANIN SÜREÇ YILINI HESAPLAMA\n",
+    "\n",
     "S = P(1+r*t) olduğuna göre t = ((S/P)-1)/r olur.\n",
     "\n",
     "\n",
-    "Örnek4: 1200 dolar tutarındaki bir anapara yüzde 12 basit faiz altında bankaya yatırılmıştır. Kaç yıl sonra yatırılan anapara 1800 dolar miktarına ulaşır?"
+    "Örnek4: 1200 dolar tutarındaki bir anapara yüzde 12 basit faiz altında bankaya yatırılmıştır. Kaç yıl sonra yatırılan anapara 1800 dolar miktarına ulaşır?\n",
+    "\n",
+    "S = P + I\n",
+    "\n",
+    "S = P + ( 1 + 0.12 x t )\n",
+    "\n",
+    "1800 = 1200 + ( 1.12 x t)\n",
+    "\n",
+    "t = 600 / 1.12\n",
+    "\n",
+    "t = 4.17 yıl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
